<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="top"
    android:background="@color/feed_background"
    android:layout_gravity="center_horizontal"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:textAlignment="center"
        android:textSize="28sp"
        android:text="@string/select_meeting_details"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:text="@string/detail_location"/>
    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="80dp"
        android:layout_marginLeft="80dp"
        android:id="@+id/location_spinner"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:text="@string/detail_time"/>
    <TimePicker
        android:layout_width="400dp"
        android:layout_height="100dp"
        android:timePickerMode="spinner"
        android:id="@+id/time_picker"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:text="@string/detail_date"/>
    <DatePicker
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:datePickerMode="spinner"
        android:calendarViewShown="false"
        android:id="@+id/date_picker"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/submit_details_button"
        android:text="@string/submit_details_button_label"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        />
</LinearLayout>