<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.NewPostFragment"
    android:background="@color/feed_background"
    android:orientation="vertical">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_new_post"
        style="@style/TitleTextView"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="1dp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_input_label"
        style="@style/InputFieldLabel"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:id="@+id/title_edit_text"
        style="@style/input_field"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/desc_input_label"
        style="@style/InputFieldLabel"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/desc_edit_text"
        android:lines="3"
        android:maxLines="6"
        android:maxLength="150"
        style="@style/input_field"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/price_input_label"
        style="@style/InputFieldLabel"
        />
    <NumberPicker
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/price_picker"
        style="@style/PricePicker"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/select_image_button"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="30dp"
            android:background="@color/input_background"
            android:text="@string/image_input_label"
            android:onClick="pickImage"/>
        <ImageView
            android:layout_marginTop="30dp"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/image_preview"
            android:src="@drawable/baseline_image_24"/>
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:id="@+id/submit_button"
        android:text="@string/submit_button"/>



</LinearLayout>